# browsertrace

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LAUNCH.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  llms.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  cloud_interest.yml  config.yml  feature_request.yml  integration_request.yml
.github/workflows/: ci.yml  pages.yml  publish.yml
browsertrace/: __init__.py  cli.py  demo.py  server.py  tracer.py
browsertrace/integrations/: __init__.py  browser_use.py  skyvern.py  stagehand.py
browsertrace/templates/: base.html  index.html  run.html
docs/: browser-agent-failure-patterns.html  browser-use-debugging.html  compare-browser-agent-debugging.html  computer-use-agent-debugging.html  debug-browser-agent-failure.html  index.html  integrations.html  llms.txt  playwright-llm-debugging.html  robots.txt  sitemap.xml  skyvern-debugging.html  stagehand-debugging.html  trace.html
docs/launch/: channel-copy.md  chinese-tutorial-post.md  day-1-publish-packet.md  day-2-show-hn-packet.md  day-3-targeted-communities-packet.md  day-4-product-hunt-packet.md  directory-submission-sheet.md  github-awesome-list-submissions.md  github-profile-readme.md  index.html  metrics-log.md  monitoring-runbook.md  outreach-targets.md  owner-email-send-packet.md  owner-launch-submission-packet.md  owner-next-actions.md  owner-next-actions.zh-CN.md  owner-publish-queue.md  owner-social-post-packet.md  press-kit.md  response-templates.md  search-indexing-submission.md  tutorial-post.md
docs/release/: pypi-publishing.md
docs/superpowers/plans/: 2026-05-09-browsertrace-7-day-launch-growth.md  2026-05-09-browsertrace-launch-readiness.md
docs/superpowers/specs/: 2026-05-09-browsertrace-1000-star-design.md  2026-05-09-browsertrace-7-day-launch-growth-design.md
examples/: README.md  basic_example.py  browser_use_callback_demo.py  browseruse_example.py  computer_use_loop_example.py  failure_example.py  multipage_failure.py  no_api_failure_demo.py  playwright_example.py  playwright_llm_loop_example.py  skyvern_wrapper_example.py  stagehand_wrapper_example.py
scripts/: launch_metrics.py  record_demo.py
tests/: test_basic.py  test_browser_use_integration.py  test_cli.py  test_edge_cases.py  test_examples.py  test_launch_metrics.py  test_metadata.py  test_record_demo_script.py  test_server.py  test_skyvern_integration.py  test_stagehand_integration.py
