[project]
name = "browsertrace"
version = "0.1.0"
description = "See what your AI browser agent did and why it failed"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["ai", "agent", "browser", "observability", "debugging", "llm"]
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
browsertrace = "browsertrace.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["browsertrace"]
