[project]
name = "browsertrace"
version = "0.1.9"
description = "See what your AI browser agent did and why it failed."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "aaronlab"}]
keywords = [
    "ai",
    "agent",
    "agent-observability",
    "browser",
    "browser-agent",
    "browser-automation",
    "browser-use",
    "debugging",
    "llm",
    "local-first",
    "observability",
    "playwright",
    "skyvern",
    "stagehand",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# SDK-only deps. The web UI deps are in [project.optional-dependencies.ui]
# so users who only want to record traces don't have to install FastAPI etc.
dependencies = []

[project.optional-dependencies]
ui = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "jinja2>=3.0",
]
ai = [
    "openai>=1.0",
]
dev = [
    "pytest>=7.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "jinja2>=3.0",
    "httpx>=0.24",
]

[project.urls]
Homepage = "https://aaronlab.github.io/browsertrace/"
Documentation = "https://aaronlab.github.io/browsertrace/"
Repository = "https://github.com/aaronlab/browsertrace"
Issues = "https://github.com/aaronlab/browsertrace/issues"
Release = "https://github.com/aaronlab/browsertrace/releases/tag/v0.1.9"

[project.scripts]
browsertrace = "browsertrace.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["browsertrace"]
