[project]
name = "browsertrace"
version = "0.1.16"
description = "See what your AI browser agent did and why it failed."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "aaronlab"}]
keywords = [
    "ai",
    "agent",
    "agent-observability",
    "ai-agent-debugging",
    "browser",
    "browser-agent",
    "browser-agents",
    "browser-automation",
    "browser-use",
    "computer-use",
    "debugging",
    "llm",
    "llm-observability",
    "local-first",
    "observability",
    "playwright",
    "skyvern",
    "stagehand",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
]
# SDK-only deps. The web UI deps are in [project.optional-dependencies.ui]
# so users who only want to record traces don't have to install FastAPI etc.
dependencies = []

[project.optional-dependencies]
ui = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "jinja2>=3.0",
]
ai = [
    "openai>=1.0",
]
dev = [
    "pytest>=7.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "jinja2>=3.0",
    "httpx>=0.24",
]

[project.urls]
Homepage = "https://aaronlab.github.io/browsertrace/"
Documentation = "https://aaronlab.github.io/browsertrace/"
Repository = "https://github.com/aaronlab/browsertrace"
Issues = "https://github.com/aaronlab/browsertrace/issues"
Release = "https://github.com/aaronlab/browsertrace/releases/tag/v0.1.16"
"Debugging Guide" = "https://aaronlab.github.io/browsertrace/debug-browser-agent-failure.html"
"Computer Use Guide" = "https://aaronlab.github.io/browsertrace/computer-use-agent-debugging.html"
"Browser Use Guide" = "https://aaronlab.github.io/browsertrace/browser-use-debugging.html"
Changelog = "https://github.com/aaronlab/browsertrace/blob/main/CHANGELOG.md"
Roadmap = "https://github.com/aaronlab/browsertrace/blob/main/ROADMAP.md"
Discussions = "https://github.com/aaronlab/browsertrace/discussions/6"

[project.scripts]
browsertrace = "browsertrace.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["browsertrace"]
